--- a/실습/실습2(kh)/index.html
+++ b/실습/실습2(kh)/index.html
@@ -9,29 +9,87 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="./style/index.css">
-    <link rel="stylesheet" href="./style/header.css">
-    <link rel="stylesheet" href="./style/nav.css">
 </head>
 <body>
-    <header class="header">
-        <img class="KH-logo" src="assets/image/실습문제2 이미지/logo.PNG" alt="KH로고">
-        <div class="search">
-            <input class="search-bar" type="text" placeholder="검색어를 입력하세요.">
-            <button class="search-button"><img class="search-logo" src="assets/image/실습문제2 이미지/search.png" alt=""></button>
+    <div id="wrapper">
+        <div id="header" class="bo">
+            <img src="assets/image/logo.PNG" alt="kh로고">
+
+            <div class="search bo">
+                <input type="text" placeholder="검색어를 입력하세요">
+                <div class="search-img"></div>
+            </div>
+            <div style="width: 95px;">
+            </div>
         </div>
-    </header>
-    <nav class="nav">
-        <ul class="menu-bar">
-            <li>교육과정</li>
-            <li>교육원소개</li>
-            <li>취업지원센터</li>
-            <li>산학연계</li>
-            <li>상담센터</li>
-        </ul>
-    </nav>
-   
-    <main></main>
+        <div id="nav" class="bo">
+            <ul>
+                <li><a href="#">교육과정</a></li>
+                <li><a href="#">교육원소개</a></li>
+                <li><a href="#">취업지원센터</a></li>
+                <li><a href="#">산학연계</a></li>
+                <li><a href="#">상담센터</a></li>
+            </ul>
+        </div>
+
+        <div id="section">
+            <div id="section1" class="bo">
+                <img src="assets/image/banner.PNG" alt="광고배너">
+            </div>
+            <div id="section2" class="bo">
+                <p>안녕하세요 여기는 공지사항이 들어오는 자리입니다.</p>
+                <ul>
+                    <li><a href="#">경제</a></li>
+                    <li><a href="#">연예</a></li>
+                    <li><a href="#">사회</a></li>
+                </ul>
+            </div>
+            <div id="section3" class="bo">  
+            </div>
+        </div>
+
+        <div id="aside" >
+            <div id="aside1" class="bo">
+                <div class="login">
+                    <div class="input">
+                        <input type="text" placeholder="아이디를 입력하세요">
+                        <input type="password" placeholder="비밀번호를 입력하세요.">
+                    </div>
+                    <div class="btn">
+                        <button>로그인</button>
+                    </div>
+                </div>
+                <div class="aside1-menu">
+                    <ul>
+                        <li><a href=""><span>아이디</span></a></li>
+                        <li><a href=""><span>비밀번호찾기</span></a></li>
+                        <li><a href="">회원가입</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="aside2" class="bo">
+            </div>
+        </div>
+
+        <div  id="footer" class="bo">
+            <ul class="md-20">
+                <li><a href="#"><span>이용약관</span></a></li>
+                <li><a href="#"><span>개인정보취급방침</span></a></li>
+                <li><a href="#"><span>인재채용</span></a></li>
+                <li><a href="#">고객센터</a></li>
+            </ul>
+
+            <div class="md-20">
+                <p>강남지원 1관 : 서울특별시 강남구 테헤란로14길 6 남도빌딩 2F, 3F, 4F, 5F, 6F </p>
+                <p>강남지원 2관 : 서울특별시 강남구 테헤란로10길 9 그랑프리 빌딩 4F, 5F, 7F</p>
+                <p>강남지원 3관 : 서울특별시 강남구 테헤란로 130 호산빌딩 5F, 6F</p>
+            </div>
+            <div class="text-center">
+                Copyright © 1998-2024 KH Information Educational Institute All Right Reserved
+            </div>
+        </div>
+    </div>
     
-    <footer></footer>
+   
 </body>
 </html>
