--- a/실습/실습2(kh)/index.html
+++ b/실습/실습2(kh)/index.html
@@ -25,7 +25,15 @@
         <div id="nav" class="bo">
             <ul>
                 <li><a href="#">교육과정</a></li>
-                <li><a href="#">교육원소개</a></li>
+                <li>
+                    <a href="#">교육원소개</a>
+                    <ul>
+                        <li><a href="">자바</a></li>
+                        <li><a href="">네트워크</a></li>
+                        <li><a href="">보안</a></li>
+                        <li><a href="">데브옵스</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">취업지원센터</a></li>
                 <li><a href="#">산학연계</a></li>
                 <li><a href="#">상담센터</a></li>
